sandc/test/fixtures/astRegression/shouldSucceed/productions/nonReturnablePseudex/NonEmptyListPseudex.sand
pub class NonEmptyListPseudex {
    noTrailingComma() {
        let foo = +["hi", if bar() { bar() } else { bar }, "hi"];
    }

    trailingComma() {
        let foo = +["hi", if bar() { bar() } else { bar }, "hi",];
    }
}