sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/SwitchStatement.sand
pub class SwitchStatement {
    foo() {
        (
            switch val {
                else {
                    b();
                }
            }
        )
    }
}